# small_robots_archive

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
common/: Cargo.toml
common/src/: lib.rs
datasource/mastodon/: Cargo.toml
datasource/mastodon/src/: html.rs  ident.rs  main.rs  mastodon.rs  model.rs
legacy/: Cargo.toml  Dockerfile
legacy/src/: error.rs  main.rs  respond.rs  robots.rs
legacy/src/page/: base.rs
legacy/static/: plaintext.txt
parser/: Cargo.toml
parser/src/: lib.rs
sbbarch_mastodon/: Cargo.toml
sbbarch_mastodon/src/: html.rs
src/: clone_data.rs  error.rs  main.rs  respond.rs  robots.rs  search.rs  templates.rs
src/page/: base.rs  error_page.rs  mod.rs
static/: about_test.html  morebot.html  test.html
static/style/: main.css
